collapse added need to correct range slider

--- a/Thriller page/thriller.css
+++ b/Thriller page/thriller.css
@@ -268,3 +268,96 @@ ul.breadcrumb {
     color: #0275d8;
     text-decoration: none !important;
   }
+  .categories{
+    width: 280px;
+    height: 1150px;
+    overflow-y: auto;
+  }
+  .accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+  .accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .panel {
+    width: 280px;
+    height: 316px;
+    overflow-y: auto;
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    transition: max-height 0.2s ease-out;
+  }
+  .mega-menu {
+    width: 1350px;
+    overflow: hidden;
+    padding: 10px;
+    margin-left: -341px;
+}
+.mega-menu a{
+    text-decoration: none;
+    color: cadetblue;
+}
+.mega-menu .sub-menu-heading{
+    color: darkcyan;
+}
+.slidecontainer {
+    width: 10%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 25%;
+    height: 5px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
